# spellcast_solver

./: Cargo.toml  LICENSE  README.md  distance.py  read.py  rustfmt.toml  shape.txt
assets/: shape.txt  shape_bonuses.txt  shape_temp.txt
src/: TODO.md  dictionary.rs  main.rs  shape.rs
