[package]
name = "spellcast_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release-fast]
inherits = "release"
codegen-units = 1
lto = "fat"
# lto = true
opt-level = 3
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
rayon = "1.9.0"
